name:                shownth
version:             0.1.3.0
-- synopsis:
-- description:
homepage:            https://github.com/AnickaBurova/shownth#readme
license:             BSD3
license-file:        LICENSE
author:              Anicka Burova
maintainer:          anicka.burova@gmail.com
copyright:           2017 Anicka Burova
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable shownth
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , shownth
  default-language:    Haskell2010

test-suite shownth-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , shownth
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/AnickaBurova/shownth


